[package]
name = "oxygen-cli"
version = "0.1.0"
edition = "2021"

[features]
jack = ["oxygen-core/jack"]

[dependencies]
oxygen-core = { path = "../lib" }
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
color-eyre = "0.6.1"
ctrlc = "3.2.2"
symphonia = {version = "0.5.0", features = ["isomp4", "mp3", "aac"] }
hound = "3.4.0"
log = "0.4.17"
env_logger = "0.9.0"
