[package]
name = "oxygen-cli"
version = "0.1.0"
edition = "2021"

[features]
jack = ["oxygen-core/jack"]

[dependencies]
oxygen-core = { path = "../lib" }
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = "0.6.2"
ctrlc = "3.2.5"
symphonia = {version = "0.5.2", features = ["isomp4", "mp3", "aac"] }
hound = "3.5.0"
log = "0.4.17"
env_logger = "0.10.0"
