[package]
name = "oxygen-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oxygen-cli"
path = "src/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
cpal = "0.13.5"
color-eyre = "0.6.1"
dasp = {version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"]}
directories = "4.0.1"
chrono = "0.4.19"
ctrlc = "3.2.2"
audiopus = "0.3.0-rc.0"
symphonia = {version = "0.5.0", features = ["isomp4", "mp3", "aac"] }
hound = "3.4.0"
napi = {version = "2.4.3", features = ["napi8"]}
napi-derive = "2.4.1"
log = "0.4.17"
env_logger = "0.9.0"

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]
