[package]
name = "oxygen-core"
version = "0.1.0"
edition = "2021"

[features]
jack = ["cpal/jack"]

[dependencies]
cpal = { version = "0.15.2", features = [] }
color-eyre = "0.6.2"
dasp = {version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"]}
directories = "5.0.1"
chrono = "0.4.24"
audiopus = "0.3.0-rc.0"
symphonia = {version = "0.5.2", features = ["isomp4", "mp3", "aac"] }
hound = "3.5.0"
log = "0.4.17"
rusqlite = { version = "0.29.0", features = ["bundled"] }
