[package]
name = "oxygen-core"
version = "0.1.0"
edition = "2021"

[features]
jack = ["cpal/jack"]
whisper_dummy = []

[dependencies]
cpal = { version = "0.15.2", features = [] }
color-eyre = "0.6.2"
dasp = {version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"]}
directories = "5.0.1"
chrono = "0.4.24"
audiopus = "0.3.0-rc.0"
symphonia = {version = "0.5.2", features = ["isomp4", "mp3", "aac"] }
hound = "3.5.0"
log = "0.4.17"
rusqlite = { version = "0.29.0", features = ["bundled"] }
whisper-rs = {git = "https://github.com/tazz4843/whisper-rs", rev = "bf6d6fcf17c39e008d8280a174f135a95c517b4e"}
realfft = "3.3.0"
