[package]
name = "oxygen-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
oxygen-core = { path = "../lib" }
napi = {version = "2.4.3", features = ["napi8"]}
napi-derive = "2.4.1"
chrono = "0.4.19"

[target.'cfg(windows)'.dependencies.windows]
version = "0.37.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console"
]

[build-dependencies]
napi-build = "2.0.0"
