[package]
name = "oxygen-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
jack = ["oxygen-core/jack"]
whisper_dummy = ["oxygen-core/whisper_dummy"]

[dependencies]
oxygen-core = { path = "../lib" }
napi = {version = "2.12.6", features = ["napi8"]}
napi-derive = "2.12.5"
chrono = "0.4.24"
log = "0.4.17"
lazy_static = "1.4.0"

[build-dependencies]
napi-build = "2.0.1"
